# PFE_PCL

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  Resources.qrc  ScanLIDAR.pro  fragment.cpp  fragment.h  glarea.cpp  glarea.h  graphvertex.cpp  graphvertex.h  kippi.cpp  kippi.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plane.cpp  plane.h  planes.cpp  polygon.cpp  polygon.h  polygons.cpp  polygons.h  primitive.cpp  primitive.h  resources.qrc  vertex.cpp  vertex.h  vertices.cpp  vertices.h
html/: annotated.html  classFragment-members.html  classFragment.html  classGLArea-members.html  classGLArea.html  classGLArea__coll__graph.dot  classGLArea__coll__graph.md5  classGLArea__inherit__graph.dot  classGLArea__inherit__graph.md5  classKippi-members.html  classKippi.html  classMainWindow-members.html  classMainWindow.html  classMainWindow__coll__graph.dot  classMainWindow__coll__graph.md5  classMainWindow__inherit__graph.dot  classMainWindow__inherit__graph.md5  classPlane-members.html  classPlane.html  classPlanes-members.html  classPlanes.html  classPolygon-members.html  classPolygon.html  classPolygons-members.html  classPolygons.html  classPrimitive-members.html  classPrimitive.html  classVertex-members.html  classVertex.html  classVertices-members.html  classVertices.html  classes.html  files.html  fragment_8h_source.html  functions.html  functions_func.html  functions_vars.html  glarea_8h_source.html  graph_legend.html  hierarchy.html  (+36 more)
latex/: annotated.tex  classFragment.tex  classGLArea.tex  classGLArea.tex.tmp  classGLArea__coll__graph.dot  (+19 more)
(+33 files in other folders)
